# ffshit

./: .gitignore  CMakeLists.txt  README.md
inc/: blocks.h  rawdata.h  system.h
inc/filesystem/: base.h  directory.h  extract.h  file.h  newsgold.h  newsgold_x85.h  sgold.h
src/: blocks.cpp  main.cpp  rawdata.cpp  system.cpp
src/filesystem/: directory.cpp  extract.cpp  file.cpp  newsgold.cpp  newsgold_x85.cpp  sgold.cpp
